5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2564.log
== TEST (2019-06-05 17:08:14) 
-- CODE:
from numpy import*
ti=array(eval(input("num.de gols: ")))
ad=array(eval(input("num. de gols do adversario: ")))
x=zeros(3,dtype=int)
for i in range(size(ti)):
	if(ti[i]>ad[i]):
	x[0]=x[0]+1
	elif(ti[i]==ad[i]):
	x[1]=x[1]+1
	elif(ti[i]<ad[i]):
	x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 7
    x[0]=x[0]+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 17:09:25) 
-- CODE:
from numpy import*
ti=array(eval(input("num.de gols: ")))
ad=array(eval(input("num. de gols do adversario: ")))
x=zeros(3,dtype=int)
for i in range(size(ti)):
	if(ti[i]>ad[i]):
	x[0]= (x[0]+1)
	elif(ti[i]==ad[i]):
	x[1]=x[1]+1
	elif(ti[i]<ad[i]):
	x[2]=x[2]+1
print(x)
-- ERROR:
File "XXXX", line 7
    x[0]= (x[0]+1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 17:10:03) 
-- CODE:
from numpy import*
ti=array(eval(input("num.de gols: ")))
ad=array(eval(input("num. de gols do adversario: ")))
x=zeros(3,dtype=int)
for i in range(size(ti)):
	if(ti[i]>ad[i]):
		x[0]=x[0]+1
	elif(ti[i]==ad[i]):
		x[1]=x[1]+1
	elif(ti[i]<ad[i]):
		x[2]=x[2]+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 17:10:59) 
-- CODE:
from numpy import*
ti=array(eval(input("num.de gols: ")))
ad=array(eval(input("num. de gols do adversario: ")))
x=zeros(3,dtype=int)
for i in range(size(ti)):
	if(ti[i]>ad[i]):
		x[0]=x[0]+1
	elif(ti[i]==ad[i]):
		x[1]=x[1]+1
	elif(ti[i]<ad[i]):
		x[2]=x[2]+1
print(x)
-- EXECUTION TIME:
0.87127
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
